--- a/README
+++ b/README
@@ -3,13 +3,12 @@
 3) Maintainer(s) & Patch policy
 4) Copyright
 5) Current State - x86
-6) Current State - ARM
-7) Current State - MIPS
-8) Current State - PPC
-9) Current State - alpha, amd64, hppa, ia64, s390 & sparc
-10) TODO
-
-
+6) Current State - ARM vfp
+7) Current State - ARM hardfp
+8) Current State - MIPS
+9) Current State - PPC
+10) Current State - alpha, amd64, hppa, ia64, s390 & sparc
+11) TODO
 
 1) Intro
 
@@ -18,7 +17,14 @@ libraries to allow users to run .NET applications under linux built
 using OE. For more info about mono, see mono project's website. For
 more info on OpenEmbedded, see OE's website.
 
+This README pertains to meta-mono layer support for Mono 3.2.8 
 
+For Mono release notes please see:
+
+http://www.mono-project.com/Release_Notes_Mono_3.2
+
+NOTE: That as of Mono 3.2.7 there is initial support for the ARM hardfp ABI
+      which should enable us to use hardfp builds of e.g. Yocto/Poky
 
 2) Dependencies
 
@@ -34,68 +40,58 @@ Mono does not require Sato, it does require X if you want to run
 Windows Forms applications. While mono can run w/o X, that recipe
 is not supported currently. It is unlikely to be supported.
 
-
-
 3) Maintainer(s) & Patch policy
+
+Alex J Lennon (ajlennon@dynamicdevices.co.uk)
 
 Autif Khan (autif.mlist@gmail.com)
 autif on #yocto on freenode
 
-Send a patch or tar.gz file as attachment to the maintainer.
+Follow Yocto change submission policy, detailed here
 
+http://www.yoctoproject.org/docs/1.4.2/dev-manual/dev-manual.html#how-to-submit-a-change
 
+Use the create-pull-request and send-pull-request scripts details in 3.9.1. Send 
+to the maintainer and to yocto@yoctoproject.org
 
 4) Copyright
 
 MIT/GPLv2 - following the lead of libgdiplus and mono
 
-
-
 5) Current State - x86: Works
 
-Maintainer uses Yocto/OE/Poky as his build environment. He has built
-core-image-mono and core-image-mono-sdk for qemux86 and crownbay. The
-maintainer has also tested mono using all the runtime tests and
-few library tests that come with mono. The maintainer has also tested
-one Windows Forms application.
+25/02/2014
 
+Alex J Lennon (ajlennon@dynamicdevices.co.uk) has tested a Poky 
+build on a qemux86 platform, with a simple console application 
+and a simple Windows Forms application. 
 
+6) Current State - ARM vfp: Works
 
-6) Current State - ARM: Works
+25/02/2014
 
-Maintainer uses Yocto/OE/Poky as his build environment. He has built
-core-image-mono for qemuarm. The maintainer has tested one Windows
-Forms application.
+Alex J Lennon (ajlennon@dynamicdevices.co.uk) has tested a Poky 
+build on a Freescale i.MX6 platform, with a simple console application 
+and a simple Windows Forms application. 
 
-Alex J Lennon (ajlennon@dynamicdevices.co.uk) has tested a Yocto/OE/Poky 
-build on the Raspberry Pi Model B, with a simple console application 
-and a simple Windows Forms application. He has also tested that remote 
-debugging of applications is possible from Visual Studio 2010 using 
-monotools-server.
+7) Current State - ARM hardfp: Builds
 
-7) Current State - MIPS: Minor issues need to be resolved
+Builds for i.MX6 platform with hardfp enabled. Needs testing.
 
-Maintainer uses Yocto/OE/Poky as his build environment. He has built
-core-image-mono for qemumips. A Windows Forms application fails to
-execute. More investigation is needed, if there is an interest in getting
+7) Current State - MIPS: Unknown
+
+More investigation is needed, if there is an interest in getting
 mono to work perfectly on MIPS, please contact the maintainer.
 
+8) Current State - PPC
 
-
-8) Current State - PPC: Does not build
-
-Maintainer uses Yocto/OE/Poky as his build environment. The build for
-core-image-mono for qemuppc fails. If there is an interest in getting
+More investigation is needed, if there is an interest in getting
 mono to work perfectly on PPC, please contact the maintainer.
-
-
 
 9) Current State - alpha, amd64, hppa, ia64, s390 & sparc: Unknown
 
 When qemu provided by Yocto supports one of these machines, the
 maintainer will support these architectures.
-
-
 
 10) TODO
 
