--- a/FAQ
+++ b/FAQ
@@ -26,7 +26,7 @@ PREFERRED_VERSION_mono-native = "3.4.0"
 
 Q. How do I include Mono in an image?
 
-Ideally you would wish to create an image recipe that inherits a base image recipe,
+A. Ideally you would wish to create an image recipe that inherits a base image recipe,
 or .bbappends to a base image recipe, possibly in a new layer.
 
 The core-image-mono in recipes-mono/images shows how to do this. In core-image-mono.bb
