--- a/README
+++ b/README
@@ -1,22 +1,33 @@
-1) Intro
-2) Dependencies
-3) Examples
-4) Maintainer(s) & Patch policy
-5) Copyright
-6) Current State - x86
-7) Current State - ARM vfp
-8) Current State - ARM hardfp
-9) Current State - MIPS
-10) Current State - PPC
-11) Current State - alpha, amd64, hppa, ia64, s390 & sparc
-12) TODO
+1) Overview
+2) Intro
+3) Dependencies
+4) Examples
+5) Maintainer(s) & Patch policy
+6) Copyright
+7) Current State - x86
+8) Current State - ARM vfp
+9) Current State - ARM hardfp
+10) Current State - MIPS
+11) Current State - PPC
+12) Current State - alpha, amd64, hppa, ia64, s390 & sparc
+13) TODO
 
-1) Intro
+1) Overview
 
-meta-mono is an OpenEmbedded layer that builds mono runtime and mono
-libraries to allow users to run .NET applications under linux built
-using OE. For more info about mono, see mono project's website. For
-more info on OpenEmbedded, see OE's website.
+meta-mono is an OpenEmbedded layer that builds mono runtime and mono libraries to allow users to run .NET applications under linux built using OE. 
+
+For more info about:
+
+Mono         - http://www.mono-project.com/Main_Page
+OpenEmbedded - http://www.openembedded.org/
+Yocto        - https://www.yoctoproject.org/
+
+For specific instructions on how to include Mono support within a Yocto embedded linux image, 
+and for details on how to build example .NET projects for inclusion and execution within that image:
+
+https://wiki.yoctoproject.org/wiki/Building_and_running_embedded_Linux_.NET_applications_from_first_principles
+
+2) Introduction
 
 This README pertains to meta-mono layer support for Mono 3.2.8 / 3 4.0
 
@@ -28,7 +39,7 @@ http://www.mono-project.com/Release_Notes_Mono_3.4
 NOTE: That as of Mono 3.2.7 there is initial support for the ARM hardfp ABI
       which should enable us to use hardfp builds of e.g. Yocto/Poky
 
-2) Dependencies
+3) Dependencies
 
 On the host:
 The host system must have the following packges:
@@ -42,7 +53,7 @@ Mono does not require Sato, it does require X if you want to run
 Windows Forms applications. While mono can run w/o X, that recipe
 is not supported currently. It is unlikely to be supported.
 
-3) Build Examples
+4) Build Examples
 
 There are mono-helloworld and a mono-helloworld-xbuild recipes in recipes-mono
 
@@ -53,13 +64,16 @@ easily download and checkout a commit from the git repository.
 mono-helloworld then implements the recommended autotools files for build with
 autoconf. This is based on the Mono example, mono-skel.
 
-For details see: http://mono-project.com/Guidelines:Application_Deployment
-
 mono-helloworld-xbuild implements a Visual Studio 2010 solution and projects
 which allow us to checkout and build using Visual Studio on a Windows host,
 or alternatively using Mono xbuild within a Yocto/OpenEmbedded recipe.
 
-4) Maintainer(s) & Patch policy
+For details see: 
+
+Recipe build               - https://wiki.yoctoproject.org/wiki/Building_and_running_embedded_Linux_.NET_applications_from_first_principles
+Mono deployment guidelines - http://mono-project.com/Guidelines:Application_Deployment
+
+5) Maintainer(s) & Patch policy
 
 Alex J Lennon (ajlennon@dynamicdevices.co.uk)
 
@@ -73,11 +87,11 @@ http://www.yoctoproject.org/docs/1.4.2/dev-manual/dev-manual.html#how-to-submit-
 Use the create-pull-request and send-pull-request scripts details in 3.9.1. Send 
 to the maintainer and to yocto@yoctoproject.org
 
-5) Copyright
+6) Copyright
 
 MIT/GPLv2 - following the lead of libgdiplus and mono
 
-6) Current State - x86: Works
+7) Current State - x86: Works
 
 25/02/2014
 
@@ -85,7 +99,7 @@ Alex J Lennon (ajlennon@dynamicdevices.co.uk) has tested a Poky
 build on a qemux86 platform, with a simple console application 
 and a simple Windows Forms application. 
 
-7) Current State - ARM vfp: Works
+8) Current State - ARM vfp: Works
 
 25/02/2014
 
@@ -93,28 +107,28 @@ Alex J Lennon (ajlennon@dynamicdevices.co.uk) has tested a Poky
 build on a Freescale i.MX6 platform, with a simple console application 
 and a simple Windows Forms application. 
 
-8) Current State - ARM hardfp: Works
+9) Current State - ARM hardfp: Works
 
 22/04/2014
 
 Builds and runs on i.MX6 platform with hardfp enabled. 
 
-9) Current State - MIPS: Unknown
+10) Current State - MIPS: Unknown
 
 More investigation is needed, if there is an interest in getting
 mono to work perfectly on MIPS, please contact the maintainer.
 
-10) Current State - PPC
+11) Current State - PPC
 
 More investigation is needed, if there is an interest in getting
 mono to work perfectly on PPC, please contact the maintainer.
 
-11) Current State - alpha, amd64, hppa, ia64, s390 & sparc: Unknown
+12) Current State - alpha, amd64, hppa, ia64, s390 & sparc: Unknown
 
 When qemu provided by Yocto supports one of these machines, the
 maintainer will support these architectures.
 
-12) TODO
+13) TODO
 
 10.1) see if mono works for amd64, seems like qemux86-64 is available
 10.2) investigate why windows forms apps dont run on MIPS
