--- a/FAQ
+++ b/FAQ
@@ -20,6 +20,11 @@ A. Modify your conf/local.conf file to include the following
 
 For Mono 3.2.8
 
+PREFERRED_VERSION_mono = "3.10.0"
+PREFERRED_VERSION_mono-native = "3.10.0"
+
+For Mono 3.2.8
+
 PREFERRED_VERSION_mono = "3.2.8"
 PREFERRED_VERSION_mono-native = "3.2.8"
 
@@ -52,6 +57,12 @@ IMAGE_INSTALL_append = " mono"
 
 Q. How do I use Mono 3.x.x on Windows?
 
-A. See the article here on building the Mono sources under Windows
+A. See the articles here on building the Mono sources under Windows
  
+3.4.x / 3.6.x
+
 http://www.codeproject.com/Articles/769292/How-to-build-Mono-on-Windows
+
+3.8.x / 3.10.x
+
+http://www.codeproject.com/Articles/815565/How-to-build-Mono-on-Windows
