README,FAQ: Add notes on the need for meta-oe layer in bblayers.conf
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/FAQ
+++ b/FAQ
@@ -49,6 +49,8 @@ image built
 
 IMAGE_INSTALL_append = " mono"
 
+Note that libgdiplus requires giflib which introduces a dependency on the meta-oe layer
+
 Q. How do I use Mono 3.x.x on Windows?
 
 A. See the articles here on building the Mono sources under Windows
