Use ":" override syntax instead of "_"
Scripted change with oe-core/scripts/contrib/convert-overrides.py
The proposal for this was at
https://www.mail-archive.com/openembedded-architecture@lists.openembedded.org/msg00500.html

The necessary changes to bitbake to accept ":" along with "_" were
backported to bitbake 1.46 (Yocto 3.1 Dunfell), 1.48 (3.2 Gatesgarth)
and 1.50 (3.3 Hardknott).

Yocto 3.4 Honister will only accept ":"

Signed-off-by: Zoltán Böszörményi <zboszor@gmail.com>

--- a/FAQ
+++ b/FAQ
@@ -47,7 +47,7 @@ So you can modify your own image recipe(s) in this manner. However in the simple
 for testing you can add the following to your conf/local.conf to add packages to every 
 image built
 
-IMAGE_INSTALL_append = " mono"
+IMAGE_INSTALL:append = " mono"
 
 Note that libgdiplus requires giflib which introduces a dependency on the meta-oe layer
 
